# pico_projects

./: .gitignore  .gitmodules  README.md
pico_6502/: CMakeLists.txt  main.cpp  palette.h  ram.hpp  tusb_config.h  usb_keyboard.cpp  usb_keyboard.h  w65c02s.hpp  waveshare_rp2350_pizero.h
pico_6502/ili9488/: font_info.txt  hagl_hal.c  hagl_hal.h  hagl_hal_color.h
pico_6502/programs/: adventure.h  alive.h  brickout.h  color_cycle.h  fire.h  plasma.h
pico_hdmi/: CMakeLists.txt  pico_hdmi.c
pico_hdmi2/: CMakeLists.txt  pico_hdmi2.c
pico_keyboard/: CMakeLists.txt  keyboard.c  main.c
pico_sd_card/: CMakeLists.txt  README.md  sd_card_cli.c  sd_card_diskio.c
pizero-kbd/: CMakeLists.txt  keyboard.c  keyboard.h  main.c  waveshare_rp2350_pizero.h
pizero-usb/: CMakeLists.txt  main.c  tusb_config.h
sd_card_cli/: CMakeLists.txt  README.md  sd_card_cli.c
sd_card_cli/boards/: PORTING.md
sd_card_cli/boards/fruit_jam/: hw_config.c
sd_card_cli/boards/picomite/: hw_config.c  picomite.h  picomite_pinmap.txt
sd_card_cli/boards/waveshare_rp2350_pizero/: hw_config.c  pizero_pinmap.md  waveshare_rp2350_pizero.h
sd_card_cli/tests/: CMakeLists.txt  README.md  sd_card_tests.c  verify_sd_tests.py
smpte_color_bars/: CMakeLists.txt  README.md  smpte_color_bars.c
smpte_color_bars/pico_dvi/include/: common_dvi_pin_configs.h
text_display/: CMakeLists.txt  blue_screen_demo.c  font_8x14.h  text_display.c
